# emailite

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  email.rs  handlers.rs  main.rs  models.rs  utils.rs
src/component/: EmailPreview.jsx  EmailSettings.jsx
src/pages/: EmailWrite.jsx  EmainDisplay.jsx  HomePage.jsx
